Tyler/overflow fixes (#120)
* Scroll fixes, add generic scroll css class for future containers that need scrolling

* Making only csv able to upload (not other file types). Also fixing error message on website

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,16 @@ $hover-blue: #728edd;
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
+.scroll {
+  overflow-y: auto;
+  height: 90vh;
+  &.assignments {
+    height: 60vh;
+  }
+  &.edit-templates-container {
+    height: 80vh;
+  }
+}
 .blue-button {
   background-color: $primary-blue;
   color: white !important;
@@ -70,6 +80,10 @@ $hover-blue: #728edd;
 .global-blue {
   background-color: $primary-blue;
 }
+.error-message {
+  padding-top: 10px;
+}
+
 .inbox {
   // border: solid gray 1px;
   width: 230px;
